[package]
name = "extio"
version = "0.1.0"
edition = "2024"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
license = "MIT"
description = """
A unified asynchronous I/O abstraction layer for Rust.

`extio` provides a single trait (`Extio`) that defines common interfaces for 
files, networking, databases, cloud storage, IPC, scheduling, logging, and cryptography. 
It is designed to enable backends and runtimes to implement consistent, pluggable 
I/O behaviors across different environments (local, cloud, embedded, or distributed).

Features include:
- File and directory operations
- Cloud/object storage (put/get/delete)
- HTTP, TCP, UDP, and WebSocket networking
- Database queries and execution
- Process execution
- Message queues and pub-sub
- Inter-process communication (IPC)
- Time and scheduling utilities
- Environment configuration
- Logging and metrics collection
- Cryptographic signing, verification, and secret management

By default, all methods are unimplemented; users are expected to provide 
their own implementations depending on their runtime or backend.
"""

[dependencies]
async-trait = "0.1"
http = "1.3"
reqwest = "0.12.23"
serde = "1.0.226"
tokio = { version = "1.47", features = ["full"] }
